# informath

./: .gitignore  Makefile  README.md  _config.yml  informath.cabal  stack.yaml
app/: RunInformath.hs
data/: extract_naproche_zf.py  get_wikidata.py  naproche.conllu
datasets/: smad.tar.bz2
doc/: InformathAPI.html  informath-under-the-hood.md  old-news.md
exper/: Deduction.hs
experiments/: Deduction.hs
grammars/: Annotations.gf  BaseConstants.gf  BaseConstantsEng.gf  BaseConstantsFre.gf  BaseConstantsGer.gf  BaseConstantsSwe.gf  Categories.gf  CategoriesEng.gf  CategoriesFunctor.gf  CategoriesGer.gf  Examples.gf  ExamplesCze.gf  ExamplesEng.gf  ExamplesFre.gf  ExamplesFunctor.gf  ExamplesGer.gf  ExamplesSwe.gf  GodementWords.gf  GodementWordsEng.gf  GodementWordsFin.gf  Graphs.gf  GraphsFin.gf  HottLexicon.gf  HottLexiconEng.gf  HottWords.gf  HottWordsCze.gf  HottWordsEng.gf  HottWordsFre.gf  HottWordsSwe.gf  Identifiers.gf  IdentifiersLatex.gf  Informath.gf  InformathCze.gf  InformathEng.gf  InformathFin.gf  InformathFre.gf  InformathFunctor.gf  InformathGer.gf  InformathSwe.gf  MathCore.gf  (+73 more)
next/: AbsDedukti.hs  BuildConstantTable.hs  DMC.hs  Dedukti2MathCore.hs  Environment4.hs  IMC.hs  InformathAPI.hs  MCD.hs  MCI.hs  README.md  Ranking4.hs  SpecialConstants.hs  TopConversions.hs  Utils.hs  constants.dkgf  graphs.dk  graphs.dkgf  next.dk
previous/: Core2Dedukti.hs  Core2Informath.hs  Dedukti2Core.hs  Environment3.hs  Informath2Core.hs  Informath3.hs  Ranking3.hs  base_constant_data.dkgf
scripts/: unmacro.py  (+5 more)
web/: InformathServer.hs  Koe.hs  koe.cabal
(+181 files in other folders)
